<resources>
    <string name="app_name">"test de recrutemen"</string>
    <string name="OK">OK</string>

    <string name="exit">Exit</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Real  And Demo Test  -->
    <string name="real_test_no_question">No questions available in Real Test </string>
    <string name="demo_test_no_question">No questions available in Demo Test </string>
    <string name="internet_connection">Please check your internet connection </string>

    <!-- TestType Activity  -->
    <string name="start_real_test">Start Real Test</string>
    <string name="start_demo_test">Start Demo Test</string>

    <!--Result Activity -->
    <string name="have_done">You have done</string>
    <string name="next_one">question, ready for the next one ?</string>
    <string name="title_activity_term_and_condition_avtivity">TermAndConditionAvtivity</string>
    <string name="title_activity_term_condition">TermConditionActivity</string>
    <string name="title_activity_test_type">TestTypeActivity</string>
    <!--<string name="done_question_message">You have done 3 / 30 question, ready for the next one ?</string>-->
    <string name="Next_button">Next</string>
    <string name="Finish_button">Finish</string>

    <!-- Main Activity -->
    <string name="Submit_Answer">Submit Answer</string>
    <string name="alert_ok">OK</string>
    <string name="submit_sucessfully">Thank you for submitting your answer."</string>

    <!-- Splash Screen -->
    <string name="Questionnaire">Questionnaire</string>
    <string name="please_wait">"Please wait...</string>
    <string name="start">START</string>


    <!-- Terms and Conditions -->
    <string name="Terms_and_Conditions">Terms and Conditions</string>
    <string name="Not_Data_Available">Not Data Available</string>
    <string name="I_Agree">I Agree</string>


    <!-- Row option -->
    <!--<string name="M_S_Dhoni">M.S.Dhoni.</string>-->


    <!-- Toast Message -->
    <string name="something_wrong">Something went wrong try again</string>
    <string name="Error_401">Error 401</string>


    <!-- Api Service -->
    <string name="Server_is_not_responding">Server is not responding</string>

    <!-- Terms And Condition -->
    <string name="key">tos</string>
    <string name="device_id">5e1070ddb76a587f</string>

    <!-- Multipart Request -->
    <string name="volly_error">IOException writing to ByteArrayOutputStream bos, building the multipart request.</string>

    <!-- MarshMallow Permission -->
    <string name="requestPermissionForPhoneCall">Call phone permission needed for make a call. Please allow in app settings for additional functionality.</string>
    <string name="requestPermissionForGetAccounts">Get account permission needed for information. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForReadContacts">Read contact permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForAccessFineLocation">Location permission needed for access location. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForAccessCrossLocation">Location access permission needed for access location. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForRecord">Microphone permission needed for recording. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForExternalStorage">External Storage permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForReadExternalStorage">External Storage permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="requestPermissionForCamera">Camera permission needed. Please allow in App Settings for additional functionality.</string>

    <!-- Android Utils -->

    <string name="test_zip">test1.zip</string>

    <!-- QuestionnaireService -->

    <string name="please_wait_questionnaire">Please Wait</string>

    <!-- Send Audio Service OR SendImageService -->
    <string name="notification_mbuilder_title_text">Questionnaire</string>
    <string name="notification_mbuilder_contenttext">Uploading...</string>
    <string name="multipart_mbuilder_content_text">Audio uploaded successfully</string>
    <string name="Image_uploaded_sucessfully">Images uploaded successfully</string>

    <!-- Deep Linking -->

    <!-- Local -->
    <string name="local_host">192.168.1.43</string>
    <string name="local_pathPrefix">/questionnaire/public/questionnaire</string>

    <!-- Local -->
    <string name="live_host">questionnairesapi.voicedigit.com</string>
    <string name="live_pathPrefix">public/questionnaire/</string>

    <!-- Intro Slider -->
    <string name="next">NEXT</string>
    <string name="prev">Prev</string>
</resources>
