<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_term_condition_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/Terms_and_Conditions"
        android:textSize="@dimen/tv_title_text_size"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll_term_condition"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv_term_condition_lbl"
        android:layout_above="@+id/btn_term_condition_start"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_term_condition"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="@dimen/tv_normal_text_size"
        android:text="@string/Not_Data_Available"/>
    </ScrollView>
    <Button
        android:id="@+id/btn_term_condition_start"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/I_Agree"/>
</RelativeLayout>
