<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="test.de.recrutement.activities.SplashActivity">
    <ImageView
        android:id="@+id/iv_splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_512"/>
    <TextView
        android:id="@+id/tv_splash_title"
        android:layout_below="@+id/iv_splash_logo"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/Questionnaire"
        />
    <TextView
        android:id="@+id/tv_pls_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:textColor="@color/disable_btn_color"
        android:textSize="@dimen/tv_title_text_size"
        android:text="@string/please_wait"/>
    <TextView
        android:id="@+id/btn_splash_start"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:padding="10dp"
        android:textSize="25sp"
        android:background="@android:color/transparent"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
